bug fix: sidenavs' elements staying out of screen

--- a/app/statics/css/sidenav.css
+++ b/app/statics/css/sidenav.css
@@ -3,7 +3,7 @@
     width: 0;
     position: fixed;
     z-index: 1;
-    top: auto;
+    top: 5%;
     bottom: 0px;
     /*left: auto;*/
     background-color: #343a40;
